tests/fixtures/negative/truncation/007_member_chain_eof.js
// Expected error: unterminated member access chain.
value[1
